--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ PORT=3000
 # Set to "false" to see browser window (useful for debugging)
 HEADLESS=true
 
-# Timeout in milliseconds (default: 30000 = 30 seconds)
-TIMEOUT=30000
+# Timeout in milliseconds (default: 60000 = 60 seconds)
+TIMEOUT=60000
+
+# Custom download path (optional, default: ~/Downloads/Instagram)
+# DOWNLOAD_PATH=D:\Instagram
