--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,12 +7,16 @@
     "action": {
         "default_popup": "popup/popup.html",
         "default_title": "InstaDown",
-        "default_icon": "icons/icon.png"
+        "default_icon": {
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
+        }
     },
     "icons": {
-        "16": "icons/icon.png",
-        "48": "icons/icon.png",
-        "128": "icons/icon.png"
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
     "permissions": [
         "activeTab",
@@ -34,7 +38,8 @@
     "content_scripts": [
         {
             "matches": [
-                "https://www.instagram.com/stories/*"
+                "https://www.instagram.com/stories/*",
+                "https://instagram.com/stories/*"
             ],
             "js": [
                 "content/story-capture.js"
