--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instagram-downloader",
-  "version": "2.0.0",
-  "description": "Download photos and videos from Instagram posts, carousels, and reels",
+  "version": "2.3.0",
+  "description": "Download photos and videos from Instagram posts, carousels, reels, stories, and highlights",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -13,7 +13,9 @@
     "puppeteer",
     "media",
     "video",
-    "photo"
+    "photo",
+    "stories",
+    "reels"
   ],
   "author": "ArisaAkiyama",
   "license": "MIT",
@@ -22,9 +24,15 @@
     "url": "https://github.com/ArisaAkiyama/InstagramDownloader.git"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "puppeteer": "^21.6.1",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.34.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.5"
   }
 }
